<resources>
    <string name="app_name">challenge_ch6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tvWelcome">Welcome, Username</string>
    <string name="tvFavourite">Favourite</string>
    <string name="tvLogout">Logout</string>
    <string name="page_title">Home</string>
    <string name="apply_blur">Apply Blur</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="movie_title">Movie Title</string>
    <string name="register">Register</string>
    <string name="PasswordConfirm">Confirm Your Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="registerHere">Dont have an account yet? Register Here</string>
    <string name="update">Update</string>
    <string name="image_movie">image movie</string>
    <string name="button_for_add_to_favourite">Button for add to favourite</string>
    <string name="now_playing">Now Playing</string>
    <string name="image_synrgy_logo">Image Synrgy Logo</string>
    <string name="image_profile">Image Profile, Select to change</string>
    <string name="image_for_movie">Image for Movie Poster</string>
</resources>