<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.UserFragment">

    <TextView
        android:id="@+id/tvPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginVertical="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="15dp"
        android:contentDescription="Image Profile, Select to change"
        android:src="@drawable/user_1077114"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvPageTitle" />

    <Button
        android:id="@+id/btnApplyBlur"
        android:text="@string/apply_blur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnApplyBlur"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:hint="@string/PasswordConfirm">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordConfirm"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/tvLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>